--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ width:100%;
   box-shadow:         3px 3px 5px 6px #ccc;
 }
 
-.boxes {
+.boxy {
    display:block;
    width:600px;
    margin:auto;
