--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ background-color:#515151;
    display:block;
    float:right;
    height:200px;
+   margin-left:25px;
 }
 
 .vote {
@@ -30,6 +31,7 @@ background-color:#515151;
    display:block;
    float:left;
    height:200px;
+   margin-right:25px;
 }
 
 .title {
