--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,8 @@ background-color:#515151;
    float:right;
    height:200px;
    margin-right:15px;
+   margin-top:15px;
+   margin-bottom:15px;
    
 }
 
@@ -34,6 +36,8 @@ background-color:#515151;
    float:left;
    height:200px;
    margin-left:15px;
+margin-top:15px;
+   margin-bottom:15px;
 }
 
 .title {
