--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@ background-color:#515151;
    margin-left:15px;
 margin-top:15px;
    margin-bottom:15px;
+   font-size:24px;
 }
 
 .title {
@@ -45,4 +46,9 @@ margin-top:15px;
 }
 #logo {
    min-height:100px;
+}
+
+.corner {
+  
+
 }
