--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ background-color:#515151;
    margin-left:15px;
 margin-top:15px;
    margin-bottom:15px;
-   font-size:24px;
+   font-size:xx-large;
 }
 
 .title {
